--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/linearalgebrapot/sosasosa-web#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-subdomain": "^1.0.5",
     "serve-static": "^1.14.1"
   }
 }
