--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-subdomain": "^1.0.5",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "vhost": "^3.0.2"
   }
 }
